--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: #333;
+    color: red;
     text-align: center;
     font-family:Arial;
     font-size: 16px;
@@ -8,7 +8,7 @@ body
 
 #cabecera
 {
- background: #33a ;
+ background: red ;
  box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
  color: white;
  font-weight: bold;
